# afids-CNN

./: .gitignore  LICENSE  README.md  pyproject.toml
afids_cnn/: __init__.py  apply.py  apply_all.py  generator.py  preprocessing.py  train.py  utils.py
afids_cnn/apply_workflow/config/: snakebids.yml
afids_cnn/apply_workflow/workflow/: Snakefile
afids_cnn/train_workflow/config/: snakebids.yml
afids_cnn/train_workflow/workflow/: Snakefile
bash_scripts/: train-cnn_scratch.sh  train-cnn_scratch_gpu.sh
config/: snakebids.yml
notebooks/: =8.3.2  afids_CNN_apply.ipynb  auto-CNN_train.ipynb  pre-processing-NN.ipynb
notebooks/.ipynb_checkpoints/: AFIDs-auto-NN-checkpoint.ipynb  afids_CNN_apply-external-checkpoint.ipynb  auto-afids_preproc-checkpoint.ipynb
resources/: afids_template.fcsv  sub_afids_template.fcsv
resources/templates/: tpl-MNI152NLin2009cAsym_res-01_T1w.fcsv
resources/trained_models/0/: keras_metadata.pb
resources/trained_models/10/: keras_metadata.pb
resources/trained_models/11/: keras_metadata.pb  saved_model.pb
resources/trained_models/12/: keras_metadata.pb  saved_model.pb
resources/trained_models/13/: keras_metadata.pb  saved_model.pb
resources/trained_models/14/: keras_metadata.pb  saved_model.pb
resources/trained_models/15/: keras_metadata.pb  saved_model.pb
resources/trained_models/17/: saved_model.pb
resources/trained_models/18/: keras_metadata.pb
resources/trained_models/19/: keras_metadata.pb  saved_model.pb
resources/trained_models/2/: saved_model.pb
resources/trained_models/20/: keras_metadata.pb  (+1 more)
workflow/: Snakefile
workflow/scripts/: train.py
(+53 files in other folders)
